--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dingtalk-jsapi": "^2.0.56",
     "element-ui": "^2.4.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
